fixed zindex bug putting mobile nav menu behind slider

--- a/client/styles.styl
+++ b/client/styles.styl
@@ -159,6 +159,17 @@ body
     font-size 800% !important
     padding 20px
     
+/*Override*/
+.ui.menu {
+    opacity: 1;
+    z-index: 1;
+}
+
+.go-behind {
+    position: relative !important;
+    z-index: -1 !important;
+} 
+ 
     
 // h1    
 //     font-family imogen !important
